Addressed some browser compatibility issues and general styling (#206)
* Adjusted dropdown menus for touchscreen support

- Menu links were dependent  on hover function for the drop down to appear. This caused problems on touchscreens.  Top menu option no longer has click action, instead all options are in the dropdown menu. Dropdown menu now appears on touch.
- Also, for smaller screens, the menus were disappearing off the right side of the screen. Dropdown menus now align to the right of the menu item so they are always onscreen
- replaced blurry google login button

* Restyled "include inactive" button to fix alignment

* GUI fixes for Internet Explorer

Two minor fixes for correct display in IE:
- icons in legend were not appearing for IE, made them an img instead of part of css
- padding was 1px off causing elements to move around on hover-over in IE

* Modified "No matches found" message in search results

Was appearing above the exact match box, and message was vague in a way that didn't make sense when there was an exact resource match.

* Minor style adjustments

- Indent second line of search facet label so it's easier to scan the list
- Add more space below H2, which is used for Resource labels at top of page.

--- a/webapp/src/main/webapp/includes/stylesheets/layout.css
+++ b/webapp/src/main/webapp/includes/stylesheets/layout.css
@@ -32,7 +32,7 @@ h1 a { text-indent: -9999px; }
 #main-nav { float: right; }
 #main-nav ul, #main-nav li { list-style: none; padding: 0; margin: 0; display: inline; } 
 #main-nav ul li { float: left; position: relative; }
-#main-nav ul li a { display: inline-block; padding: 38px 10px 29px 10px; margin: 0px 5px; text-decoration: none; font-size: 14px; border-bottom: 3px solid transparent; }
+#main-nav ul li a { display: inline-block; padding: 38px 10px 30px 10px; margin: 0px 5px; text-decoration: none; font-size: 14px; border-bottom: 3px solid transparent; }
 #main-nav ul li:hover { border-bottom: 3px solid #0000C1 !important; }
 .current { font-weight: bold !important; color: #444 !important; border-bottom: 3px solid #0000C1 !important; }
 
@@ -43,8 +43,8 @@ h1 a { text-indent: -9999px; }
        display: none;
        position: absolute;
        z-index: 999;
-       left: 0;
-       top: 91px;
+       right: 0;
+       top: 92px;
    }
       
 #main-nav ul li:hover ul.dropdown-menu{
@@ -66,7 +66,7 @@ h1 a { text-indent: -9999px; }
     border: 2px solid #f2f2f2;
     position: absolute;
     z-index: 999;
-    left: 0;
+    right: 0;
     padding: 0px 4px 0px 0px;
     top: 92px;
     text-align: center;
@@ -80,6 +80,14 @@ h1 a { text-indent: -9999px; }
 
 #main-nav ul li .logged-in-icon {padding: 0px 5px 0px 0px; float:left;}
 
+.noselect {
+	-webkit-touch-callout: none; /* iOS Safari */
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none;
+}
 
 /* #Site Styles
 ================================================== */
@@ -89,7 +97,7 @@ a:hover, .clickableText:hover { color: #aaccff; }
 
 h1, h2, h3, h4, h5, h6 { font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif; color: #003c67; font-weight: bold; overflow-wrap: break-word; word-wrap: break-word; }
 h1 { font-size: 24px; line-height: 30px; color: #5e7071; margin: 10px 0px 5px 0;}
-h2 { font-size: 18px; line-height: 20px; color: #5e7071; margin: 10px 0 5px 0;}
+h2 { font-size: 18px; line-height: 20px; color: #5e7071; margin: 10px 0 7px 0;}
 h3 { font-size: 14px; line-height: 18px; color: #5e7071; }
 h4 { font-size: 14px; line-height: 18px; color: #5e7071; }
 h5 { font-size: 12px; line-height: 18px; color: #5e7071; }
@@ -407,7 +415,6 @@ p.greybox{
 	color:#0000C1;
 }
 
-
 legend {
     font-size:1.4em;
 }
@@ -670,6 +677,8 @@ input[readonly]{background-color:#f0f0f0;}
 .facets .facet {
 	padding-top: 10px;
 	padding-bottom:10px;
+    padding-left: 15px;
+    text-indent: -15px;
 }
 
 .facets hr {
@@ -693,12 +702,19 @@ input[readonly]{background-color:#f0f0f0;}
 }
 
 .includeInactive {
-	display:inline-block;
-	float:right;
-	padding:5px;
-	margin-top:10px;
-	border:1px solid #aaa;
-	background-color:#eee;
-	font-color: #333;
+    display: inline-block;
+    float: right;
+    padding: 4px 4px 0px 4px;
+    margin-top: 10px;
+    border: 1px solid #aaa;
+    background-color: #eee;
+    color: #333;
+}
+
+.includeInactive p {
+    display: inline-block;
+    line-height: 11px;
+    margin: 0;
+    vertical-align: text-top;
 }
 
